# nftgo

./: .gitignore  README.md  setup.cfg
src/nftgo/: api.py  service.py
