[metadata]
name = nftgo
version = 1.1.0
author = MapleStoryIsGood
author_email = 17826800084g@gmail.com
description = NFTGO API and service wrapper
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp
    furl

[options.packages.find]
where = src